--- a/templates/destinatarios/listado.html
+++ b/templates/destinatarios/listado.html
@@ -7,8 +7,7 @@
 
   <!-- Lista de destinatarios  -->
   <h2 class="mb-4">Lista de Destinatarios</h2>
-  <a href="{% url 'nuevo_destinatario' %}" class="nuevo-pedido mr-3"><i class="fa-solid fa-circle-plus"></i> Nuevo
-    Destinatario</a>
+  <a href="{% url 'nuevo_destinatario' %}" class="nuevo-pedido mr-3"><i class="fa-solid fa-location"></i> Nuevo Destinatario</a>
   <table class="table">
     <thead>
       <tr>
