--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
         {% for cat in categorias %}
         <button class="boton-categoria filtro-categoria" data-categoria="{{ cat }}">{{ cat }}</button>
         {% endfor %}
-        <a href="{% url 'pedido_crear' %}" class="nuevo-pedido"><i class="fa-solid fa-circle-plus"></i> Nuevo Pedido</a>
+        <a href="{% url 'pedido_crear' %}" class="nuevo-pedido"><i class="fas fa-shopping-cart"></i> Nuevo Pedido</a>
     
     </div>
 
