--- a/templates/pagos/listado.html
+++ b/templates/pagos/listado.html
@@ -27,7 +27,7 @@
           <td data-label="Estado">{{ pago.estado }}</td>
           <td data-label="Comprobante">
             {% if pago.comprobante %}
-              <a href="{{ pago.comprobante.url }}" target="_blank">Ver Comprobante</a>
+              <a class="btn btn-info btn-sm" style="background-color: #ec9813; color: white;" href="{{ pedido.pago.comprobante.url }}" target="_blank"><i class="fas fa-eye"></i> Ver Comprobante</a>
             {% else %}
               No disponible
             {% endif %}
