--- a/templates/productos/listado.html
+++ b/templates/productos/listado.html
@@ -7,8 +7,7 @@
 
   <!-- Historial de pedidos  -->
   <h2 class="mb-4">Lista de Productos</h2>
-  <a href="{% url 'nuevo_producto' %}" class="nuevo-pedido mr-3"><i class="fa-solid fa-circle-plus"></i> Nuevo
-    Producto</a>
+  <a href="{% url 'nuevo_producto' %}" class="nuevo-pedido mr-3"><i class="fa-solid fa-cart-plus"></i> Nuevo Producto</a>
   <table class="table">
     <thead>
       <tr>
